<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/end_margin_40dp"
        android:layout_marginEnd="@dimen/end_margin_40dp"
        android:layout_marginBottom="@dimen/start_margin_ten_dp"
        android:fontFamily="@font/butcherman"
        android:padding="@dimen/start_margin_ten_dp"
        android:text="@string/welcome_back"
        android:textColor="#2196F3"
        android:textSize="@dimen/app_name_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:duplicateParentState="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:startIconDrawable="@drawable/ic_mail_outline">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2sp"
            android:contentDescription="@string/login_progress"
            android:indeterminate="true"
            android:visibility="visible"
            app:indicatorColor="@color/progress_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgot_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/adamina"
                android:padding="3sp"
                android:text="@string/forgot_password"
                android:textColor="#249AF8" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin_ten_dp"
            android:layout_marginEnd="@dimen/end_margin_ten_dp"
            android:layout_marginBottom="5sp"
            android:backgroundTint="#2196F3"
            android:fontFamily="@font/adamina"
            android:padding="4sp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin_ten_dp"
            android:layout_marginEnd="@dimen/end_margin_ten_dp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/background_btn_shape"
            android:fontFamily="@font/adamina"
            android:padding="4sp"
            android:text="@string/signup"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/google_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin_ten_dp"
            android:layout_marginEnd="@dimen/end_margin_ten_dp"
            android:background="@drawable/background_btn_shape"
            android:padding="4sp"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            app:icon="@drawable/ic_google_icon"
            app:iconTint="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>