<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/no_connection"
    tools:context=".ui.NoInternet">
<TextView
    android:id="@+id/connect_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="2sp"
    android:layout_marginTop="50sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/no_connection"
    />
    <TextView
        android:id="@+id/check_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2sp"
        app:layout_constraintTop_toBottomOf="@+id/connect_text"
        app:layout_constraintEnd_toEndOf="@+id/connect_text"
        app:layout_constraintStart_toStartOf="@+id/connect_text"
        android:text="@string/check_connection"
        />
    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:textColor="@color/black"
        android:background="@drawable/background_btn_shape"
        app:layout_constraintTop_toBottomOf="@+id/check_text"
        app:layout_constraintStart_toStartOf="@+id/check_text"
        app:layout_constraintEnd_toEndOf="@id/check_text"
        android:text="@string/retry"
        />
</androidx.constraintlayout.widget.ConstraintLayout>