<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10sp"
            android:src="@drawable/ic_sunglasses_smiley_face"
            app:civ_circle_background_color="@color/progress_color" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/butcherman"
            android:gravity="center"
            android:text="@string/cool"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/app_name_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/butcherman"
            android:gravity="center"
            android:text="@string/chatter"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/let_s_get_started"
            android:textSize="35sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin_ten_dp"
            android:layout_marginEnd="@dimen/end_margin_ten_dp"
            android:layout_marginBottom="@dimen/start_margin_ten_dp"
            android:background="@drawable/background_btn_shape"
            android:padding="@dimen/padding_15dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/login_text_size" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_margin_ten_dp"
            android:layout_marginEnd="@dimen/end_margin_ten_dp"
            android:layout_marginBottom="@dimen/start_margin_ten_dp"
            android:background="@drawable/background_btn_shape"
            android:padding="@dimen/padding_15dp"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="@dimen/login_text_size" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
