<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        tools:context=".ui.login.LoginActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:fontFamily="@font/marko_one"
                android:text="@string/signup"
                android:textColor="@color/colorBlue"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:civ_border_color="#03A9F4"
                    app:civ_border_width="4dp"
                    app:layout_constraintBottom_toBottomOf="@+id/photo_selector"
                    app:layout_constraintEnd_toEndOf="@+id/photo_selector"
                    app:layout_constraintStart_toStartOf="@+id/photo_selector"
                    app:layout_constraintTop_toTopOf="@+id/photo_selector" />

                <ImageButton
                    android:id="@+id/photo_selector"
                    android:layout_width="96sp"
                    android:layout_height="96sp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/rectangle_smooth_corner_background"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/ic_baseline_add_circle_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/add_profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_profile_picture"
                    android:fontFamily="@font/alike"
                    android:padding="4sp"
                    app:layout_constraintTop_toBottomOf="@+id/photo_selector"
                    app:layout_constraintStart_toStartOf="@id/photo_selector"
                    app:layout_constraintEnd_toEndOf="@id/photo_selector"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2sp"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColorHint="#546E7A" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColorHint="#546E7A" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:backgroundTint="#2196F3"
                android:text="@string/signup" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:background="@drawable/background_btn_shape"
                android:fontFamily="@font/adamina"
                android:text="@string/login"
                android:textColor="@color/black" />
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/loading"
                app:indicatorColor="@color/progress_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:contentDescription="@string/login_progress"
                android:indeterminate="true"
                android:visibility="visible"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>




